--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noam Olsson</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-          background-image: url(assets/images/ThumbBritannia.png);
-         }
-    </style>
 </head>
 <body>
-    <div class="menu">
 
-    </div>
-    <div class="head">
-        <div class="content">
-        <span class="BIGBOYHEADER">
-            NOAM OLSSON
-        </span><br/>
-        <span class="loveloTextSub">
-            <a href="aerials.html" class="loveloTextSub">Aerial Photographer</a> <span class="loveloTextSub">& </span><a href="3d.html" class="loveloTextSub">3d Artist</a>
-         </span>
-        </div>
-        </div>
+        <iframe id="displaycontent" src="cover.html" style="
+        height: 100vh;
+        width: 100vw;
+        border: none;
+        "></iframe>
+        <center>
+                 <div class="menu">
+                    <button class="menuButton" onclick="changepage('aerials.html')" >Aerials</button>
+                    <button class="menuButton" onclick="changepage('3d.html')">3d work</button>
+                    <button class="menuButton" onclick="changepage('pricing.html')">pricing</button>
+                    <button class="menuButton" onclick="changepage('library.html')">library</button>
+                    <button class="menuButton" onclick="changepage('license.html')">licensing</button>
+                   
+                 </div>
+                </center>        
+                 <script src="index.js"></script>
+
     <!--<div class="contentBox">
         
     </div>-->
