--- a/aerials.html
+++ b/aerials.html
@@ -22,7 +22,7 @@
 
         <img class="sideimgr" src="assets\images\aerials\dji_fly_20230726_121956_573_1690399208508_photo_optimized (1).jpg" title="Hedley, BC">
         <img class="sideimgr" src="assets\images\aerials\RemoteMediaFile_6554347_0_2022_03_04_17_53_18.jpg" title="Cape Roger Curtis, Bowen Island">
-        <img class="sideimgr" src="assets\images\aerials\dji_fly_20230317_143104_857_1679088671066_photo_optimized.jpg" title="The Cheif, Squamish">
+        <img class="sideimgr" src="assets\images\aerials\dji_fly_20230317_143104_857_1679088671066_photo_optimized.jpg" title="The Chief, Squamish">
     </center>
     </div>
     <div class="descriptorContent" style="background-color:chocolate;">
@@ -37,6 +37,6 @@
 
         <img>
     </div>
-    <div class="footer"><p style="text-align: center;">Copyright (c) 2024 Noam Olsson</p></div>
+    
 </body>
 </html>
