--- a/3d.html
+++ b/3d.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <div class="head1" style="background-color: darkslategrey;"><span class="loveloTextSub">3d Art & Designs</span></div>
+    <img class="peeper" src="assets\images/3d/render.png">
+    <div class="descriptorContent">
         <h6 class="loveloTextSubBlack">PAGE IN DEVELOPMENT.</h6>
-        
+        <img src="assets/images/3d/blackholerender.png" class="sideimgr">
+        <img src="assets/images/3d/mascotrend1.png" class="sideimgr">
+        <img src="assets/images/3d/pacificdrive render4.png" class="sideimgr">
+        <img src="assets/images/3d/render.png" class="sideimgr">
+        <img src="assets/images/3d/untitled.png" class="sideimgr">
+    </div>
 </body>
 </html>
